tests/typing/bad/extra-extends-parameter.scala

class T[U] extends U {}
object Main {
    def main(args: Array[String]) { }
}
